trying to squash css bug

--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -6,7 +6,7 @@
 }
 
 .index-page {
-  margin-top: 16%;
+  margin-top: 15%;
   margin-left: 2%;
 }
 
